tests/integration/errors/test_interface_body_in_declaration.sn
# Error test: interface method cannot have a body

interface Broken =>
    fn doThing(): int =>
        return 42

fn main(): int => return 0
